--- a/src/styles/mobileStyle.css
+++ b/src/styles/mobileStyle.css
@@ -30,9 +30,7 @@
   }
 
   .menu-list {
-    /* display: none; */
     background-color: #fff;
-    color: #fff;
     left: 0;
     overflow-y: auto;
     position: absolute;
@@ -47,7 +45,18 @@
 
   .menu-list .button-signup,
   .menu-list .button-shopping {
-    display: block;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    width: 100%;
+  }
+
+  .menu-list .button-signup {
+    background-color: #e5f0b6;
+  }
+
+  .menu-list .button-shopping {
+    background-color: #553b33;
   }
 
   /* hero */
